--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,24 @@
-# Taken from https://github.com/lasote/conan-zlib/blob/release/1.2.8/appveyor.yml
 build: false
 
 environment:
-    PYTHON: "C:\\Python36-x64\\"
-    PYTHON_VERSION: "3.6.3"
-    PYTHON_ARCH: "64"
+    PYTHON: "C:\\Python"
+    PYTHON_VERSION: "2.7.14"
+    PYTHON_ARCH: "32"
 
-    CONAN_UPLOAD: 1
     CONAN_REFERENCE: "icu/59.1"
     CONAN_USERNAME: "vitallium"
-    CONAN_CHANNEL: "ci"
+    CONAN_CHANNEL: "testing"
     VS150COMNTOOLS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\"
+    CONAN_UPLOAD: "https://api.bintray.com/qtproject/conan"
+    CONAN_STABLE_BRANCH_PATTERN: "release/*"
+    CONAN_TOTAL_PAGES: 1
+    CONAN_UPLOAD_ONLY_WHEN_STABLE: 1 # Will only upload when the branch matches "release/*"
 
     matrix:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - conan user # It creates the conan data directory
 
